RESOLVED FIXED35023
Missing property warning after r54873
https://bugs.webkit.org/show_bug.cgi?id=35023
Summary Missing property warning after r54873
Philippe Normand
Reported 2010-02-17 01:45:52 PST
http://trac.webkit.org/changeset/54873#file10 introduces a new enable-file-access-from-file-uris property but it wasn't declared in the class.
Attachments
proposed patch (4.91 KB, patch)
2010-02-17 02:16 PST, Philippe Normand
xan.lopez: review+
Philippe Normand
Comment 1 2010-02-17 02:16:40 PST
Created attachment 48874 [details] proposed patch
WebKit Review Bot
Comment 2 2010-02-17 02:18:52 PST
Attachment 48874 [details] did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebKit/gtk/webkit/webkitwebsettings.cpp:1129: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 If any of these errors are false positives, please file a bug against check-webkit-style.
Xan Lopez
Comment 3 2010-02-17 02:38:27 PST
Comment on attachment 48874 [details] proposed patch r=me with a couple of issues fixed we commented on jabber.
Philippe Normand
Comment 4 2010-02-17 02:49:36 PST
Landed in r54882, thanks :)
Note You need to log in before you can comment on or make changes to this bug.