2010-02-17  Philippe Normand  <pnormand@igalia.com>

Reviewed by Xan Lopez.

        Missing property warning after r54873
        https://bugs.webkit.org/show_bug.cgi?id=35023

        Add a new WebKitWebSettings setting, 'enable-file-access-from-file-uris', set to
        FALSE by default, that when enabled will assign each file:// URI
        their own security domain.

        * webkit/webkitwebsettings.cpp:
        (webkit_web_settings_class_init):
        (webkit_web_settings_set_property):
        (webkit_web_settings_get_property):
        (webkit_web_settings_copy):

Canonical link: https://commits.webkit.org/46189@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54882 268f45cc-cd09-0410-ab3c-d52691b4dbfc