WebKit/gtk/webkit/webkitwebsettings.cpp
@@ -98,6 +98,7 @@ struct _WebKitWebSettingsPrivate {
     gboolean enable_offline_web_application_cache;
     WebKitEditingBehavior editing_behavior;
     gboolean enable_universal_access_from_file_uris;
+    gboolean enable_file_access_from_file_uris;
     gboolean enable_dom_paste;
     gboolean tab_key_cycles_through_elements;
     gboolean enable_default_context_menu;
@@ -144,6 +145,7 @@ enum {
     PROP_ENABLE_OFFLINE_WEB_APPLICATION_CACHE,
     PROP_EDITING_BEHAVIOR,
     PROP_ENABLE_UNIVERSAL_ACCESS_FROM_FILE_URIS,
+    PROP_ENABLE_FILE_ACCESS_FROM_FILE_URIS,
     PROP_ENABLE_DOM_PASTE,
     PROP_TAB_KEY_CYCLES_THROUGH_ELEMENTS,
     PROP_ENABLE_DEFAULT_CONTEXT_MENU,
@@ -782,6 +784,23 @@ static void webkit_web_settings_class_init(WebKitWebSettingsClass* klass)
                                                          FALSE,
                                                          flags));
 
+    /**
+     * WebKitWebSettings:enable-file-access-from-file-uris:
+     *
+     * Boolean property to control file access for file:// URIs. If this
+     * option is enabled every file:// will have its own security unique domain.
+     *
+     * Since: 1.1.22
+     */
+     g_object_class_install_property(gobject_class,
+                                     PROP_ENABLE_FILE_ACCESS_FROM_FILE_URIS,
+                                     g_param_spec_boolean("enable-file-access-from-file-uris",
+                                                          "Enable file access from file URIs",
+                                                          "Controls file access for file:// URIs.",
+                                                          FALSE,
+                                                          flags));
+
+
     g_type_class_add_private(klass, sizeof(WebKitWebSettingsPrivate));
 }
 
@@ -975,6 +994,9 @@ static void webkit_web_settings_set_property(GObject* object, guint prop_id, con
     case PROP_ENABLE_UNIVERSAL_ACCESS_FROM_FILE_URIS:
         priv->enable_universal_access_from_file_uris = g_value_get_boolean(value);
         break;
+    case PROP_ENABLE_FILE_ACCESS_FROM_FILE_URIS:
+        priv->enable_file_access_from_file_uris = g_value_get_boolean(value);
+        break;
     case PROP_ENABLE_DOM_PASTE:
         priv->enable_dom_paste = g_value_get_boolean(value);
         break;
@@ -1095,14 +1117,17 @@ static void webkit_web_settings_get_property(GObject* object, guint prop_id, GVa
     case PROP_JAVASCRIPT_CAN_OPEN_WINDOWS_AUTOMATICALLY:
         g_value_set_boolean(value, priv->javascript_can_open_windows_automatically);
         break;
-   case PROP_ENABLE_OFFLINE_WEB_APPLICATION_CACHE:
+    case PROP_ENABLE_OFFLINE_WEB_APPLICATION_CACHE:
         g_value_set_boolean(value, priv->enable_offline_web_application_cache);
         break;
     case PROP_EDITING_BEHAVIOR:
         g_value_set_enum(value, priv->editing_behavior);
         break;
-   case PROP_ENABLE_UNIVERSAL_ACCESS_FROM_FILE_URIS:
+    case PROP_ENABLE_UNIVERSAL_ACCESS_FROM_FILE_URIS:
         g_value_set_boolean(value, priv->enable_universal_access_from_file_uris);
+        break;
+    case PROP_ENABLE_FILE_ACCESS_FROM_FILE_URIS:
+        g_value_set_boolean(value, priv->enable_file_access_from_file_uris);
         break;
     case PROP_ENABLE_DOM_PASTE:
         g_value_set_boolean(value, priv->enable_dom_paste);
@@ -1186,6 +1211,7 @@ WebKitWebSettings* webkit_web_settings_copy(WebKitWebSettings* web_settings)
                  "enable-offline-web-application-cache", priv->enable_offline_web_application_cache,
                  "editing-behavior", priv->editing_behavior,
                  "enable-universal-access-from-file-uris", priv->enable_universal_access_from_file_uris,
+                 "enable-file-access-from-file-uris", priv->enable_file_access_from_file_uris,
                  "enable-dom-paste", priv->enable_dom_paste,
                  "tab-key-cycles-through-elements", priv->tab_key_cycles_through_elements,
                  "enable-default-context-menu", priv->enable_default_context_menu,
